--- a/products.html
+++ b/products.html
@@ -31,7 +31,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr v-for="(item,key) in product" :key="item.id">
+                <tr v-for="(item,key) in products" :key="item.id">
                     <td>{{item.category}}</td>
                     <td>{{item.title}}</td>
                     <td>{{item.origin_price}}</td>
@@ -51,101 +51,8 @@
             </tbody>
         </table>
         <!-- modal -->
-        <div id="productModal" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static">
-            <div class="modal-dialog modal-xl">
-                <div class="modal-content">
-                    <div class="modal-header badge-primary">
-                        <h5 class="modal-title">新增商品</h5>
-                        <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <div class="form-group">
-                                    <label for="imgUrl">輸入圖片網址</label>
-                                    <input type="text" class="form-control" id="imgUrl" placeholder="請輸入圖片連結" v-model="tempProduct.imageUrl[0]">
-                                </div>
-                                <img class="img-fluid" :src="tempProduct.imageUrl[0]" alt="">
-                            </div>
-                            <div class="col-sm-8">
-                                <div class="form-group">
-                                    <label for="poductName">產品名稱</label>
-                                    <input type="text" class="form-control" id="poductName" placeholder="請輸入產品名稱" v-model="tempProduct.title">
-                                </div>
-                                <div class="form-row">
-                                    <div class="col-sm">
-                                        <div class="form-group">
-                                            <label for="poductCategory">分類</label>
-                                            <input type="text" class="form-control" id="poductCategory" placeholder="請輸入分類" v-model="tempProduct.category">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm">
-                                        <div class="form-group">
-                                            <label for="poductUnit">單位</label>
-                                            <input type="text" class="form-control" id="poductUnit" placeholder="請輸入單位" v-model="tempProduct.unit">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-row">
-                                    <div class="col-sm">
-                                        <div class="form-group">
-                                            <label for="poductOriginPrice">原價</label>
-                                            <input type="number" class="form-control" id="poductOriginPrice" placeholder="請輸入原價" v-model="tempProduct.origin_price">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm">
-                                        <div class="form-group">
-                                            <label for="poductPrice">售價</label>
-                                            <input type="number" class="form-control" id="poductPrice" placeholder="請輸入售價" v-model="tempProduct.price">
-                                        </div>
-                                    </div>
-                                </div>
-                                <hr>
-                                <div class="form-group">
-                                    <label for="poductDescription">產品描述</label>
-                                    <textarea id="poductDescription" class="form-control" placeholder="請輸入產品描述" v-model="tempProduct.description"></textarea>
-                                </div>
-                                <div class="form-group">
-                                    <label for="poductContent">說明內容</label>
-                                    <textarea id="poductContent" class="form-control" placeholder="請輸入說明內容" v-model="tempProduct.content"></textarea>
-                                </div>
-                                <div class="form-group">
-                                    <div class="form-check">
-                                        <input type="checkbox" id="enabled" class="form-check-input" v-model="tempProduct.enabled">
-                                        <label for="enabled">是否啟用</label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                        <button type="button" class="btn btn-primary" @click="updateProduct()">確認</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="delModal" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header badge-danger">
-                        <h5 class="modal-title">刪除產品</h5>
-                        <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <p>確定刪除<span class="text-danger font-weight-bold">{{tempProduct.title}}</span>？(刪除後無法復原)</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                        <button type="button" class="btn btn-danger" @click="delProduct()">確定</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <product-modal :temp-product="tempProduct" :user="user" :is-new="isNew" @done="getProducts"></product-modal>
+        <del-modal :temp-product="tempProduct" :user="user" @done="getProducts"></del-modal>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
